
New config options:
- *_inInventory_name : inventory item name
  *_inInventory_qty  : check for quantity
  These are add-ons for the skill usage, item usage and equipAuto config
  options.
- *_onAction : check for current active AI sequence (eg attack, move...)
- partySkill_target: comma seperated targets
- bindIp : if your host has multiple IP addresses, you can select which
  one to use

Bug fixes:
- "vender" command now properly detects the "end" argument. Bugfix by Fenris.
- Attacks will now properly time out when failed.
- Properly support tabs in avoid.txt
- equipAuto for teleport/skills now works, require ai_equipAuto_skilluse_giveup
  in timeout.txt
- Hopefully fixed bug where typing 'follow a' and then 'follow b' will make
  bot still follow a
- autoTalkCont bugfix by fov.
- Fixed useSelf_skill_smartHeal disabling support for heal lvl1
- Fixed chat messages c/g/p/pm - moved them to ai
- Fixed new ai_skillUse to support temporary skills.
- Fixed 'monster', 'mvp' and 'death' commands to work with new ai_skillUse.
- Fixed storage access when storage is empty.
- Various routing bug fixes (by jsteng).
- Fix typo in code block for packet 010F: rename $ID to $skillID.
- 'talk resp' now works correctly with NPCs that present a list of selections
  without saying anything else.
- Emotions that aren't in the lookup table will be displayed by number.
- Sit/stand and attack messages were getting mixed up.
- Skill failed messages now display the correct reason. (The old code
  decoded the packet incorrectly.)
- Saving at Kafra no longer prevents you from talking to another NPC
  until you relog/leave the screen. (Added sendTalkCancel call to
  00B6 packet handler.)
- Hopefully fixed carded/elemental weapon name being corrupted when
  "Cart Item Added" message uses 01C5 packet.
- "Cart Item Added" message wasn't being shown when a stackable item
  that you already have some of is added to the cart.